[project]
name = "bedpad"
version = "0.1.0"
description = "Use your phone browser as a tiny touchpad for your Windows PC."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "BedPad contributors" }
]
keywords = ["windows", "touchpad", "remote-control", "phone", "browser"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment",
]

[project.urls]
Homepage = "https://github.com/yourname/bedpad"
Issues = "https://github.com/yourname/bedpad/issues"
